--- a/package.json
+++ b/package.json
@@ -14,9 +14,5 @@
 		"parse"
 	],
 	"author": "Shriansh Agarwal",
-	"license": "ISC",
-	"devDependencies": {
-		"json2csv": "^6.0.0-alpha.2",
-		"xml-js": "^1.6.11"
-	}
+	"license": "ISC"
 }
